--- a/mod00-01/index.html
+++ b/mod00-01/index.html
@@ -26,7 +26,9 @@
 
 		<h2>Full Stack Web Developer</h2>
 
-		<p class="bio">Kevin Bigay is a Web Developer, a proud graduate of Tuitt Coding Bootcamp, with a background in Maritime Industry.  </p>
+		<hr>
+
+		<p class="bio">Kevin Bigay is a Web Developer, a proud student of Tuitt Coding Bootcamp, with a background in Maritime Industry and he enjoys good coffee as seen in the picture circa 1959 colorized.</p>
 
 	</div>
 
