Create new mod02-01

--- a/mod00-01/index.html
+++ b/mod00-01/index.html
@@ -18,19 +18,26 @@
 </head>
 <body>
 
-	<div class="wrapper">
-
+	<div class="wrapper-out">
+		
 		<img class="profile" src="img/kevin.jpg">
 
-		<h1>Kevin Bigay</h1>
+		<div class="wrapper-in">
 
-		<h2>Full Stack Web Developer</h2>
 
-		<hr>
+			<h1>Kevin Bigay</h1>
 
-		<p class="bio">Kevin Bigay is a Web Developer, a proud student of Tuitt Coding Bootcamp, with a background in Maritime Industry and he enjoys good coffee as seen in the picture circa 1959 colorized.</p>
+			<h2>Full Stack Web Developer</h2>
 
+			<hr>
+
+			<p class="bio">Kevin Bigay is a Web Developer, a proud student of Tuitt Coding Bootcamp, with a background in Maritime Industry and he enjoys good coffee as seen in the picture circa 1959 colorized.</p>
+
+		</div>
+		
 	</div>
+
+
 
 </body>
 </html>
