Created DOM Activity

--- a/mod02-03/index.html
+++ b/mod02-03/index.html
@@ -60,7 +60,7 @@
 		<br>
 		<label>Continent:</label>
 		<select name="continent">
-			<option value="asia" selected">Asia</option>
+			<option value="asia" selected>Asia</option>
 			<option value="africa">Africa</option>
 			<option value="australia">Australia</option>
 			<option value="europe">Europe</option>
@@ -73,7 +73,7 @@
 		<label><input type="radio" name="answer" value="no">No</label>
 		<br>
 		<label>Comment</label>
-		<textarea placeholder="Leave your comment here"></textarea>
+		<textarea placeholder="Leave your comment here..."></textarea>
 		<br>
 		<input type="submit" name="submit" value="Submit">
 	</form>
